--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
 	<!-- This site is optimized with the Yoast SEO plugin v22.9 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>01net - Actualité tech, tests produits, astuces &amp; téléchargements</title>
+	<title>01nettest<test></test> - Actualité tech, tests produits, astuces &amp; téléchargements</title>
 <link rel="preload" as="font" href="https://www.01net.com/app/themes/01net/public/fonts/icons.e64e9b.woff2" crossorigin>
 	<meta name="description" content="Actualités, tests produits, astuces, reportages et téléchargements. Vivez l&#039;actualité tech décryptée par les journalistes de 01net, votre média spécialisé nouvelles technologies." />
 	<link rel="canonical" href="https://www.01net.com/" />
