--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta property="og:locale" content="fr_FR" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="01net - Atest <test>ctualité tech, tests produits, astuces &amp; téléchargements" />
-	<meta property="og:description" content="test <test>Actualités, tests produits, astuces, reportages et téléchargements. Vivez l&#039;actualité tech décryptée par les journalistes de 01net, votre média spécialisé nouvelles technologies." />
+	<meta property="og:description" content="test <test>\"Actualités, tests produits, astuces, reportages et téléchargements. Vivez l&#039;actualité tech décryptée par les journalistes de 01net, votre média spécialisé nouvelles technologies." />
 	<meta property="og:url" content="https://www.01net.com/" />
 	<meta property="og:site_name" content="01net.com" />
 	<meta property="og:image" content="https://www.01net.com/app/uploads/2022/06/01net.jpg" />
